syntax = "proto3";

package user;
option go_package = "./userpb";

service Send_data {
  rpc Send(Data_send) returns (Return);
  rpc Get(Get_data_send) returns (Get_data_return);
}


message Data_send{
    bytes data=1;
    string save=2;
    int64 chunk_size=3;
}

message Return{
    bool status=1;
}

message  Get_data_send{
    string file_name=1;
}

message Get_data_return{
    bool status=1;
    bytes data=2;
}